# ZeroDay

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.monitoring.yml  docker-compose.yml  generate_sample.py  output.txt  prometheus.yml  pyproject.toml  seed_db.py  setup_db.py  test_db_conn.py
.github/workflows/: ci.yml
demo_output/: corrupted_scan_2023.json  partial_read_warning.json  statement_2023_01.json  statement_2023_03.json  statement_2023_04.json  statement_2023_05.json  statement_2023_06.json  statement_2023_07.json  statement_2023_08.json  statement_2023_09.json  statement_2023_10.json  statement_2023_11.json  statement_2023_12.json  statement_2023_13.json  statement_2023_14.json  statement_2023_15.json  statement_2023_16.json  statement_2023_17.json  statement_2023_18.json  statement_2023_19.json
deploy/: deploy_app.sh  init_database.sh  nginx.conf  rollback.sh  setup_server.sh  verify_deployment.sh
docs/: MIGRATION_GUIDE.md  SECURITY_ARCHITECTURE.md  TENANT_MANAGEMENT.md  technical_design.md
frontend/: package-lock.json  package.json
frontend/admin/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/admin/src/: App.tsx
frontend/portal/: index.html  package-lock.json  package.json
frontend/portal/src/: App.tsx
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ExtractionPanel.tsx  PDFViewer.tsx  Workbench.tsx
migrations/: env.py
migrations/versions/: 2bd1a659b142_enable_rls_policies.py  5971b00fbe99_create_tenant_tables.py  5a20da6188c2_add_admin_rls.py  8389b01af5b6_rename_provisioning_columns_fixed.py  9492ccf26b94_fix_rls_policies.py  c540300a7dab_add_phase_2_tables.py  c8addbc0f448_create_admin_users_table.py  f05b82e31595_add_multi_tenancy_schema.py
monitoring/grafana/dashboards/: system-overview.json
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: create_first_admin.py  migrate_storage.py  migrate_to_multi_tenancy.py  monitor_tenant_isolation.sh  refactor_imports.py  start_api_debug.py  verify_phase1_e2e.py  verify_phase2_auto.py
src/brokerage_parser/: __init__.py  __main__.py  api.py  cli.py  config.py  db.py  detection.py  export.py  extraction.py  models.py  orchestrator.py  storage.py  worker.py
src/brokerage_parser/api/: admin.py
src/brokerage_parser/auth/: admin.py  portal.py
src/brokerage_parser/cgt/: __init__.py  engine.py  models.py  pool.py
src/brokerage_parser/core/: audit.py  middleware.py  rate_limiter.py
src/brokerage_parser/costs/: __init__.py  engine.py  models.py
src/brokerage_parser/extraction/: __init__.py  spatial.py
src/brokerage_parser/llm/: client.py
src/brokerage_parser/metering/: collector.py  tasks.py
src/brokerage_parser/models/: __init__.py  accounting.py  admin.py  document.py  domain.py  job.py  metering.py  provisioning.py  rate_limits.py  tenant.py  types.py
src/brokerage_parser/monitoring/: metrics.py
src/brokerage_parser/notifications/: email.py
src/brokerage_parser/parsers/: __init__.py  base.py  fidelity.py  generic.py  schwab.py  vanguard.py
src/brokerage_parser/provisioning/: tasks.py  workflow.py
src/brokerage_parser/reporting/: __init__.py  engine.py  models.py  renderers.py
storage/: 1803c9fe4b819a9ed230fa92faa4a826e0608bf8d1e0e3fe04bb1b97e71d427b_report.json
tests/: conftest.py  test_api.py  test_async_flow.py  test_cgt_engine.py  test_cli.py  test_corporate_actions.py  test_costs.py  test_detection.py  test_edge_cases.py  test_extraction.py  test_generic_parser.py  test_hybrid_parsing.py  test_implicit_tables.py  test_models_uk.py  test_ocr.py  test_orchestrator.py  test_parsers.py  test_phase2_integration.py  test_positions_tables.py  test_provisioning.py  test_rate_limiting.py  test_reporting.py  test_schwab_robustness.py  test_schwab_tables.py  test_source_tracking.py  test_table_extraction.py  test_tax_intelligence.py  test_tenant_isolation.py  test_validation.py
(+27 files in other folders)
