[tool.poetry]
name = "brokerage-statement-parser"
version = "0.1.0"
description = "A lightweight local CLI tool to extract transaction data from brokerage PDFs."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "brokerage_parser", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pymupdf = "^1.23.0"          # Native PDF extraction (Fast, fitz)
pillow = "^10.2.0"           # Image processing
fastapi = "^0.109.0"         # REST API framework
uvicorn = {extras = ["standard"], version = "^0.27.0"}  # ASGI server
python-multipart = "^0.0.9"  # For file uploads
pandas = "^2.2.0"            # Data handling
pydantic = "^2.6.0"          # Validation
tqdm = "^4.66.0"             # Progress bars
pytesseract = "^0.3.10"      # OCR wrapper (optional - requires Tesseract)
rich = "^13.7.0"              # Modern terminal UI
celery = {extras = ["redis"], version = "^5.3.6"}
boto3 = "^1.34.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.1.0"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
mypy = "^1.8.0"
ruff = "^0.2.0"
httpx = "^0.27.0"  # Required for FastAPI TestClient

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.poetry.scripts]
brokerage-parser = "brokerage_parser.cli:main"
